tab hover contrast fixes

--- a/webpages/styles/colors.css
+++ b/webpages/styles/colors.css
@@ -23,8 +23,8 @@
   --navigation-background: #1c1c1c;
   --search-toolbar-background: #1c1c1c;
   --button-background: #181818;
-  --button-hover-background: #1a1a1a;
-  --tab-hover-underline: #1e1e1e;
+  --button-hover-background: #1c1c1c;
+  --tab-hover-underline: #252525;
   --input-background: #212121;
   --search-input-background: var(--content-background);
   --switch-border: #808080;
